# distributed-systems-platform

./: .gitignore  LICENSE  README.md
.github/workflows/: backend-ci.yml  docker-build.yml  frontend-ci.yml  security-scan.yml
backend/: .dockerignore  .env.example  Dockerfile  pom.xml
backend/api/: pom.xml
backend/application/: pom.xml
backend/bootstrap/: pom.xml  pom.xml.bak
backend/domain/: pom.xml
backend/infrastructure/: pom.xml
backend/shared/: pom.xml
frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: error.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/(protected)/: layout.tsx
frontend/src/app/(protected)/dashboard/: page.tsx
frontend/src/app/providers/: auth-provider.tsx  feature-flag-provider.tsx  query-provider.tsx  telemetry-provider.tsx  theme-provider.tsx
infra/: .env.example  docker-compose.yaml
infra/docker/: docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.security.yml  docker-compose.yml
infra/monitoring/otel/: otel-collector.yaml
infra/monitoring/tempo/: tempo.yaml
infra/nginx/: nginx.conf
modules/platform-images/python-base/: Dockerfile
modules/python-services/: .gitignore  pyproject.toml
modules/python-services/ai-gateway/: Dockerfile
modules/python-services/ai-gateway/app/: main.py
modules/python-services/analytics-service/: Dockerfile
modules/python-services/notification-service/: .dockerignore
modules/python-services/search-service/: Dockerfile
(+7 files in other folders)
